- fixed an issue causing values at the evaluate dialog to be cut off (#827, #829)

--- a/src/styles/_bootstrap.scss
+++ b/src/styles/_bootstrap.scss
@@ -12,3 +12,7 @@ $grid-gutter-width: 12px;
 *::after {
     box-sizing: border-box;
 }
+
+input {
+    padding: 0;
+}
